--- a/slider/slider.html
+++ b/slider/slider.html
@@ -3,34 +3,54 @@
 <head>
 	<meta charset="UTF-8">
 	<title>轮播</title>
-	<link rel="stylesheet" href="style/slider.css">
+	<link rel="stylesheet" href="slider.css">
 	<style>
 		.cell{
-			width: 450px;
-			height: 300px;
 			background-color: #aaccff;
 			padding: 5px;
+			-webkit-box-sizing: border-box;
+			-moz-box-sizing: border-box;
+			box-sizing: border-box;
 		}
 		#slider{
-			height: 300px;
+			height: 320px;
+			width: 480px;
 			margin: auto;
 		}
 		.cc{
 			font-size: 2em;
 			text-align: center;
 		}
+		#slider_iter{
+			height: 64px;
+			width: 480px;
+			margin: auto;
+			font-size: 0;
+		}
+		.iter{
+			height: 100%;
+			width: 16%;
+			font-size: 16px;
+			display: inline-block;
+		}
+		#slider_iter >.active{
+			background-color: #c99;
+		}
 	</style>
 </head>
 <body>
 <div>
 	<div id="slider" data-slider="horizontal">
-		<div class="cell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus facere fugiat hic id laudantium necessitatibus neque nesciunt sint, velit. Beatae dolore eos esse nam nisi possimus temporibus tenetur ullam ut!</div>
-		<div class="cell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores deserunt enim error est minus provident quos vero? At deleniti dolor magni repellendus reprehenderit? Autem fugit magni numquam quaerat, reprehenderit velit?</div>
-		<div class="cell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore ea eligendi fugiat iste nesciunt nihil reiciendis, totam. At atque dolores eaque hic iure mollitia odio perspiciatis quis soluta tempora. Accusamus?</div>
-		<div class="cell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cupiditate maxime nesciunt nihil repellat sed voluptates. Dolore ea eaque earum laborum odit, omnis sapiente sunt vel. Eaque exercitationem repellat totam.</div>
-		<div class="cell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet animi asperiores autem cumque, dolorum ea earum error eveniet fuga id labore magni nesciunt perferendis quia repellat sapiente sit. Hic.</div>
-		<div class="cell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores culpa cupiditate dolor excepturi illum inventore ipsum iusto nisi nobis officia omnis, perspiciatis possimus, praesentium qui ratione sequi temporibus unde voluptatum.</div>
+		<div class="cell sl r0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus facere fugiat hic id laudantium necessitatibus neque nesciunt sint, velit. Beatae dolore eos esse nam nisi possimus temporibus tenetur ullam ut!</div>
+		<div class="cell sl r1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores deserunt enim error est minus provident quos vero? At deleniti dolor magni repellendus reprehenderit? Autem fugit magni numquam quaerat, reprehenderit velit?</div>
+		<div class="cell sl r2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore ea eligendi fugiat iste nesciunt nihil reiciendis, totam. At atque dolores eaque hic iure mollitia odio perspiciatis quis soluta tempora. Accusamus?</div>
+		<div class="cell sl r3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cupiditate maxime nesciunt nihil repellat sed voluptates. Dolore ea eaque earum laborum odit, omnis sapiente sunt vel. Eaque exercitationem repellat totam.</div>
+		<div class="cell sl r4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet animi asperiores autem cumque, dolorum ea earum error eveniet fuga id labore magni nesciunt perferendis quia repellat sapiente sit. Hic.</div>
+		<div class="cell sl r5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores culpa cupiditate dolor excepturi illum inventore ipsum iusto nisi nobis officia omnis, perspiciatis possimus, praesentium qui ratione sequi temporibus unde voluptatum.</div>
 	</div>
+	<p id="slider_iter">
+		<span class="iter">1</span><span class="iter">2</span><span class="iter">3</span><span class="iter">4</span><span class="iter">5</span><span class="iter">6</span>
+	</p>
 </div>
 <p>
 	<button id="btn">stop</button>
@@ -38,12 +58,15 @@
 </p>
 
 <script src="../list.js"></script>
-<script src="js/slider.js"></script>
+<script src="slider.js"></script>
 <!--<script src="js/main.js"></script>-->
 <script>
 	window.onload=function () {
-		let fa = document.getElementById("slider");
-		let sl = new Slider(fa, 3000);
+		let fa = document.getElementById("slider");//查找轮播的父元素
+		let iter = document.getElementById("slider_iter");//查找指示器的父元素
+		let sl = new Slider(fa, iter, 3000);
+
+
 
 		document.getElementById("btn").onclick=function () {
 			sl.slider_toggle();
